[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/card/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://objects/deck/Deck.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="EnemyCard" parent="." instance=ExtResource( 1 )]
position = Vector2( 361, 100 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerCard" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 380 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerDeck" parent="." instance=ExtResource( 3 )]
position = Vector2( 200, 380 )

[node name="EnemyDeck" parent="." instance=ExtResource( 3 )]
position = Vector2( 201, 101 )

[node name="EnemyCardPosition" type="Position2D" parent="."]
position = Vector2( 360, 100 )

[node name="EnemyDeckPosition" type="Position2D" parent="."]
position = Vector2( 200, 100 )

[node name="PlayerCardPosition" type="Position2D" parent="."]
position = Vector2( 360, 380 )

[node name="PlayerDeckPosition" type="Position2D" parent="."]
position = Vector2( 200, 380 )

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="EnemyScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -170.0
margin_right = 150.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 2 )
text = "Enemy 
Score: 0"

[node name="PlayerScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 1194, 262 )
custom_fonts/font = SubResource( 2 )
text = "Your 
Score: 0"

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="DrawButton" type="Button" parent="."]
anchor_left = 0.917
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -17.5
margin_right = 20.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 2 )
text = "Draw!"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered" from="PlayerDeck" to="." method="_on_PlayerDeck_mouse_entered"]
[connection signal="mouse_exited" from="PlayerDeck" to="." method="_on_PlayerDeck_mouse_exited"]
[connection signal="mouse_entered" from="EnemyDeck" to="." method="_on_EnemyDeck_mouse_entered"]
[connection signal="mouse_exited" from="EnemyDeck" to="." method="_on_EnemyDeck_mouse_exited"]
[connection signal="pressed" from="DrawButton" to="." method="_on_Button_pressed"]
